# Plezix

./: $null  .babel-eslint.rc.js  .clang-format  .git-blame-ignore-revs  .gitignore  .hg-annotate-ignore-revs  .lldbinit  .prettierrc.js  .stylelintrc.js  .ycm_extra_conf.py  AUTHORS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  LICENSE  Makefile.in  QWEN.md  README.md  SECURITY.md  build_full.txt  build_result.txt  check_prefs.py  check_prefs2.py  check_prefs_syntax.py  client.mk  client.py  configure  configure.py  eslint-file-globals.config.mjs  eslint-ignores.config.mjs  eslint-rollouts.config.mjs  eslint-subdirs.config.mjs  eslint-test-paths.config.mjs  eslint.config.mjs  final_build.txt  full_build_log.txt  gradle.properties  mach  mach.ps1  mots.yaml  moz.build  (+9 more)
.cargo/: config.toml.in
accessible/: metrics.yaml  moz.build
browser/: .eslintrc.mjs  LICENSE  Makefile.in  app.mozbuild  build.mk  confvars.sh  moz.build  moz.configure
caps/: BasePrincipal.cpp  BasePrincipal.h  ContentPrincipal.cpp  ContentPrincipal.h  ContentPrincipalJSONHandler.h  DomainPolicy.cpp  DomainPolicy.h  ExpandedPrincipal.cpp  ExpandedPrincipal.h  ExpandedPrincipalJSONHandler.h  NullPrincipal.cpp  NullPrincipal.h  NullPrincipalJSONHandler.h  OriginAttributes.cpp  OriginAttributes.h  PrincipalHashKey.h  (+15 more)
testing/mozbase/rust/mozprofile/: Cargo.toml
testing/mozbase/rust/mozprofile/fuzz/fuzz_targets/: prefreader.rs
testing/mozbase/rust/mozprofile/src/: lib.rs  preferences.rs  prefreader.rs  profile.rs
testing/mozbase/rust/mozversion/: Cargo.toml
testing/mozbase/rust/mozversion/src/: lib.rs
(+52498 files in other folders)
