[package]
edition = "2021"
name = "mozprofile"
version = "0.9.4"
authors = ["Plezix"]
description = "Library for working with Plezix profiles."
keywords = [
    "firefox",
    "mozilla",
]
license = "MPL-2.0"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/testing/mozbase/rust/mozprofile"

[dependencies]
tempfile = "3"
thiserror = "1"
