[package]
edition = "2021"
name = "mozversion"
version = "0.5.3"
authors = ["Plezix"]
description = "Utility for accessing Plezix version metadata"
keywords = [
    "firefox",
    "mozilla",
]
license = "MPL-2.0"
repository = "https://hg.mozilla.org/mozilla-central/file/tip/testing/mozbase/rust/mozversion"

[dependencies]
regex = { version = "1", default-features = false, features = ["perf", "std"] }
rust-ini = "0.10"
semver = "1.0"
thiserror = "1"
